intellij warning quick fixes